# Duck-Game

./: .gitignore  <  CMakeLists.txt  Makefile  Prueba.yaml  README.md  a.yaml  b.yaml  comandos.txt  funcional.yaml  install.sh  jfoaslf.yaml  jugadores.yaml  lagg y cajas.yaml  map2.yaml  mystery.yaml  prueba.yaml  prueba1.yaml  prueba2.yaml  prueba3.yaml  prueba5.yaml  run_client.sh  run_server.sh  run_tests.sh  tiny.yaml
client/: CMakeLists.txt  client.cpp  client.h  client_protocol.cpp  client_protocol.h  game.cpp  game.h  lobby.cpp  lobby.h  main.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
client/SDL/: Makefile  README.md  front.cpp  frontOnePlaye.h  frontOnePlayer.cpp  image.cpp  image.h  map.cpp  map.h  player.cpp  player.h  prueba.cpp  prueba2.cpp  wingState.h
client/SDL/game/: enums.cpp  enums.h  eventhandler.cpp  eventhandler.h  frontOnePlaye.h  frontOnePlayer.cpp  game.cpp  game.h  image.cpp  image.h  loadingscreen.cpp  loadingscreen.h  map.cpp  map.h  music.cpp  music.h  musichandler.cpp  musichandler.h  player.cpp  player.h  window.cpp  window.h  wingState.cpp  wingState.h
client/SDL/game/music/: music.h  musichandler.cpp  musichandler.h  sound.cpp  sound.h
client/SDL/game/screens/: loadingscreen.cpp  loadingscreen.h  pointsscreen.cpp  pointsscreen.h  window.h  winnerscreen.cpp  winnerscreen.h
client/SDL/startUp/: startUp.cpp  startUp.h
client/comunication/: client.cpp  client.h  client_protocol.cpp  client_protocol.h  receiver.cpp  receiver.h  reciver.h  sender.cpp  sender.h
client/menu/: connection_screen.cpp  connection_screen.h  create_game_screen.cpp  create_game_screen.h  fade_in_image.cpp  fade_in_image.h  host_lobby_screen.cpp  host_lobby_screen.h  join_lobby_screen.cpp  join_lobby_screen.h  lobby_screen.cpp  lobby_screen.h  logo_screen.cpp  logo_screen.h  main_menu_screen.cpp  main_menu_screen.h  main_window.cpp  main_window.h  opening_screen.cpp  opening_screen.h  opening_window.cpp  opening_window.h  parallax_background.cpp  parallax_background.h  rounded_rectangle.h
common/: CMakeLists.txt  coordinate.h  descripcion-lobby.h  foo.cpp  liberror.cpp  liberror.h  mensaje-lobby.cpp  mensaje-lobby.h  mensaje.cpp  mensaje.h  protocol.cpp  protocol.h  protocolo-common.cpp  protocolo-common.h  protocolo-lobbys.cpp  protocolo-lobbys.h  receiver.cpp  receiver.h  sender.cpp  sender.h  socket_error.h  thread.h
common/duckState/: duckState.cpp  duckState.h
common/messages/: client_generic_msg.cpp  client_generic_msg.h  client_handler.h  descripcion-lobby.h  generic_msg.cpp  generic_msg.h  generic_msg_customizer.cpp  generic_msg_customizer.h  generic_msg_game.cpp  generic_msg_game.h  generic_msg_lobbys.cpp  generic_msg_lobbys.h  generic_msg_responseser.cpp  generic_msg_responseser.h  handler.cpp  handler.h  handler_read.cpp  handler_read.h  handler_recv.cpp  handler_recv.h  handler_send.cpp  handler_send.h  mensaje-lobby.cpp  mensaje-lobby.h  server_generic_msg.cpp  server_generic_msg.h  server_handler.h
common/protocol/: protocol-socket.cpp  protocol-socket.h  send.cpp  send.h
common/queuesStructs/: clientInfo.cpp  mensaje.cpp  mensaje.h
common/socket/: liberror.cpp  socket_error.h
docs/: recomendacionesDipa.txt
editor/: CMakeLists.txt  editor_main_window.cpp  editor_main_window.h  editor_screen.cpp  editor_screen.h  items_ids.cpp  items_ids.h  main.cpp  parallax_background.cpp  parallax_background.h  rounded_rectangle.h  save_map.h  set_initial_values_screen.cpp  set_initial_values_screen.h
maps/: Map1.yaml  Map2.yaml  Map3.yaml  Map4.yaml  Map5.yaml  a.yaml  b.yaml  c.yaml  caja.yaml  cajas.yaml  carrera.yaml  cascos2.yaml  cascostest.yaml  escaleras.yaml  funcional.yaml  map1.yaml  map2.yaml  nighttime.yaml  parkour.yaml  points.yaml  prueba.yaml  prueba2.yaml  prueba4.yaml  pruebas.yaml  pruieba.yaml  smile.yaml  snipers.yaml  t2.yaml  t3.yaml  tosky.yaml  wdawdwadwad.yaml
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  aceptador.cpp  aceptador.h  client.cpp  client.h  clients_monitor.cpp  clients_monitor.h  lobby-manager.cpp  lobby-manager.h  lobby.cpp  lobby.h  lobby_manager_protocol.h  lobbys_monitor.cpp  lobbys_monitor.h  main.cpp  mensaje-lobby.cpp  mensaje-lobby.h  protocol.h  protocolo-lobbys.cpp  protocolo-lobbys.h  read_input.h  receiver.cpp  receiver.h  send_queues_monitor.cpp  send_queues_monitor.h  sender.cpp  sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
server/comunication/: acceptor.cpp  acceptor.h  client.cpp  client.h  lobby.cpp  lobby.h  lobbys_monitor.cpp  lobbys_monitor.h  receiver.cpp  receiver.h  send_queues_monitor.h  sender.cpp  sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
server/game_logic/: air_state.cpp  air_state.h  config.cpp  config.h  config.yaml  csv_reader.h  csv_writer.h  game  game.cpp  game.h  game_loop.cpp  game_loop.h  game_main.cpp  game_main.h  main_map.csv  map.h  player.cpp  player.h  stage.cpp  stage.h
server/game_logic/config/: config.h  config.yaml  weapon_config.cpp  weapon_config.h  weapon_config.yaml
server/game_logic/map/: csv_reader.h  csv_writer.h  map.h  map_manager.cpp  map_manager.h  spawn_point.cpp  spawn_point.h  stage.cpp  stage.h
server/game_logic/player/: air_state.cpp  air_state.h  observer.h  player.cpp  player.h  player_position.cpp  player_position.h  projectile.cpp  projectile.h  projectile_dropped_weapon.h  subject.h  weapon.cpp  weapon.h
server/game_logic/player/position/: air_state.cpp  air_state.h  player_position.cpp  player_position.h
server/game_logic/player/weapons/: armor.cpp  armor.h  heavy_weapons.cpp  heavy_weapons.h  lasers.cpp  lasers.h  mystery_box.cpp  mystery_box.h  pistols.cpp  pistols.h  throwables.cpp  throwables.h  weapon.cpp  weapon.h
server/game_logic/player/weapons/armor/: armor.cpp  armor.h
tests/: CMakeCache.txt  CMakeLists.txt  foo.cpp  player_tests.cpp
tests/gameloop/: mockgameloop.h  tests_game.cpp
tests/gameloop/tests_map/: test1.yaml  test2.yaml  test3.yaml
tests/protocolo/: mock_protocol.h  protocoloCommon_test.cpp  protocoloInGeneral_test.cpp
(+3 files in other folders)
